# lu_net

./: CMakeLists.txt  main.cpp
data/images/: train.txt
include/: Matrix.h  activation_function.h  display.h  dropout_layer.h  function.h  io.h  loss_function.h  lstm.h  mnist_parser.h  net.h  optimizer.h  random.h
lstm/: README.md  lstm.py  test.py
proto/: README.txt  lu.pb.h  lu.proto
python/swig/: README.txt  net.i  setup.py
scripts/: create_filelist.sh  create_lmdb.py  create_lmdb.sh  split_train_test.sh
src/: activation_function.cpp  dropout_layer.cpp  function.cpp  io.cpp  loss_function.cpp  lstm.cpp  net.cpp
test/: activation_function_unittest.cpp
